# txt-registry-manager

./: .gitignore  README.md  company_app.py  main.py  pyproject.toml  requirements.txt
src/: manager.py  views.py
src/company_manager/: main.py  manager.py  styles.py  views.py
tests/: test_all_cases.py  test_csv_1.csv  test_csv_2.csv  test_csv_missing_headers.csv  test_csv_quoted_commas.csv  test_csv_scientific_notation.csv  test_csv_spanish_headers.csv  test_csv_trailing_commas.csv  test_json_1.json  test_json_2.json  test_json_corrupted.json  test_json_missing_keys.json  test_json_nulls.json  test_json_wrong_types.json  test_txt_1.txt  test_txt_2.txt  test_txt_bad_budget.txt  test_txt_empty_lines.txt  test_txt_encoding.txt  test_txt_extra_pipes.txt  test_txt_missing_cols.txt
