[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "company-manager"
version = "2.0.0"
description = "Professional Business Records System"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
# Command = "Package.Module:Function"
run-biz = "company_manager.main:run_app"

[tool.setuptools.packages.find]
where = ["src"]